# partial-configuration

./: .gitignore  LICENSE  README.md  make_ocs_slurm_scripts.py  make_odt_slurm_scripts.py  make_slurm_scripts.py  odt_num_features.csv  plot2grid.py  pyproject.toml  requirements.txt  run_ocs.sh
data/: README.md  metadata.json  splits.json
results/: baselines.csv  baselines_dt.csv  ocs_gcc_both.csv  ocs_gcc_both.json  ocs_gcc_both_cv.csv  ocs_gcc_both_cv.json  ocs_gcc_max.csv  ocs_gcc_max_cv.csv  ocs_gcc_mean.csv  ocs_gcc_mean_cv.csv  ocs_gcc_mean_cv.json  ocs_imagemagick_both.csv  ocs_imagemagick_both.json  ocs_imagemagick_both_cv.csv  ocs_imagemagick_both_cv.json  ocs_imagemagick_max.csv  ocs_imagemagick_max_cv.csv  ocs_imagemagick_mean.csv  ocs_imagemagick_mean_cv.csv  ocs_lingeling_both.csv  ocs_lingeling_max.csv  ocs_lingeling_max_cv.csv  ocs_lingeling_mean.csv  ocs_lingeling_mean_cv.csv  ocs_nodejs_both.csv  ocs_nodejs_both.json  ocs_nodejs_both_cv.csv  ocs_nodejs_max.csv  ocs_nodejs_max_cv.csv  ocs_nodejs_mean.csv  ocs_poppler_both.csv  ocs_poppler_both.json  ocs_poppler_both_cv.csv  ocs_poppler_both_cv.json  ocs_poppler_max.csv  ocs_poppler_max_cv.csv  ocs_poppler_mean.csv  ocs_poppler_mean_cv.csv  ocs_results.json  ocs_sqlite_both.csv  (+22 more)
slurm/: ocs_gcc_both.sh  ocs_gcc_both_cv.sh  ocs_gcc_max.sh  ocs_gcc_max_cv.sh  ocs_gcc_mean.sh  ocs_gcc_mean_cv.sh  ocs_imagemagick_both.sh  ocs_imagemagick_both_cv.sh  ocs_imagemagick_max.sh  ocs_imagemagick_max_cv.sh  ocs_imagemagick_mean.sh  ocs_imagemagick_mean_cv.sh  ocs_lingeling_both.sh  ocs_lingeling_both_cv.sh  (+314 more)
(+46 files in other folders)
