[project]
name = "partial-configuration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastcluster>=1.3.0",
    "mlxtend>=0.23.4",
    "numpy>=2.2.5",
    "ortools<9.12.0",
    "pandas>=2.2.3",
    "plotnine>=0.14.5",
    "pulp>=3.1.1",
    "pydl8-5>=0.1.8",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
